feat: change key to use system data and change directories to save profiles and reports